--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,8 +5,8 @@
     <title>Angular 2 Tour of Heroes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="sample.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/sample.css">
 
     <!-- Polyfill(s) for older browsers -->
     <script src="https://npmcdn.com/core-js/client/shim.min.js"></script>
@@ -17,7 +17,19 @@
 
     <script src="systemjs.config.js"></script>
     <script>
-      System.import('app').catch(function(err){ console.error(err); });
+      //configure system loader
+      System.config({
+        defaultJSExtensions: true,
+        packages: {
+          app: {
+            format: 'register',
+            defaultExtension: 'js'
+          }
+        }
+      });
+    </script>
+    <script>
+      System.import('../js/assets/scripts/main').catch(function(err){ console.error(err); });
     </script>
   </head>
 
